platform/manifests/level-0/ingress-gitea.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-http
  namespace: gitea
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: git.127-0-0-1.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-http
            port:
              number: 3000
